--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</header>
 			
 				<div class="menu">
-					<a href="#"><h4 class="menu__title">BILLETERIE</h4></a>
+					<a href="#"><h4 class="menu__title">BILLETTERIE</h4></a>
 					<a href="#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
 				</div>
 
@@ -78,41 +78,42 @@
 				<h3 class="content--progra_title" id="progra">PROGRAMMATION</h3>
 				<div class="grille">
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/2.jpg">
-						<h3 class="content__progra-title">Elastic SVG Elements</h3>
+						<img class="content__progra-img" src="img/cactus-mammuth.jpg">
+						<h3 class="content__progra-title">Cactus et Mammuth</h3>
 					</a>
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/3.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
+						<img class="content__progra-img" src="img/edgar-deception.jpg">
+						<h3 class="content__progra-title">Edgar déception</h3>
 					</a>
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/4.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
+						<img class="content__progra-img" src="img/ovhal.jpg">
+						<h3 class="content__progra-title">Ovhal44</h3>
 					</a>
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/1.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
+						<img class="content__progra-img" src="img/les-agites.jpg">
+						<h3 class="content__progra-title">Les Agités du Bocal</h3>
 					</a>
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/4.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
+						<img class="content__progra-img" src="img/1.png">
+						<h3 class="content__progra-title">Voilaaa Sound System</h3>
 					</a>
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/4.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
+						<img class="content__progra-img" src="img/1.png">
+						<h3 class="content__progra-title">groupe6</h3>
+
+					<a class="content__progra-item" href="#">
+						<img class="content__progra-img" src="img/1.png">
+						<h3 class="content__progra-title">groupe7</h3>
 					</a>
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/1.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
+						<img class="content__progra-img" src="img/1.png">
+						<h3 class="content__progra-title">groupe8</h3>
 					</a>
 					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/4.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
+						<img class="content__progra-img" src="img/1.png">
+						<h3 class="content__progra-title">groupe9e</h3>
 					</a>
-					<a class="content__progra-item" href="#">
-						<img class="content__progra-img" src="img/4.jpg">
-						<h3 class="content__progra-title">Item Revealer</h3>
-					</a>
+					
 				</div>
 			
 			</section>
