--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
 					
 					<h3 class="content__title">Un festival déroutant</h3>
 					<p class="content__desc">Hit the Road, c’est une aventure musicale éco-responsable où les participants se rendent en autostop. C’est un évènement 100% associatif et à but non-lucratif. A l’affiche : voyages inattendus, concerts éclectiques, conférences inspirantes et délices bios et locaux !</p>
-					<img class="content__image" src="img/banner-1.jpg">
+					<img class="content__image" src="img/banner-1.jpg" style="padding-top: 60px">
 				</div>
 			</div>
-			
-			
+
 			<div class="content-wrap">
 				<div class="content content--layout content--layout">
-					<h3 class="content__title">“Nous savons tous les deux que le monde sommeille par manque d’imprudence” Jojo, Jacques Brel</h3>
+					<h3 class="content__quote">« <i>Nous savons tous les deux que le monde sommeille par manque d’imprudence </i>»<br>— Jojo, Jacques Brel</h3>
 					<p class="content__desc">Se déplacer à la seule force de son pouce permet de limiter son empreinte carbone, rencontrer des personnes venues de mille horizons, économiser des valises d’argent, monter dans une tesla magenta et dans un tracteur bleu ciel en l’espace d’une journée et raconter une myriade d’anecdotes alambiquées à l’arrivée.
 					<br><br>Stoppeur en herbe ou en béton, tout est fait pour faciliter l’arrivée à bon port de chaque festivalier ! Des départs en binômes sont organisés depuis Paris, Lyon, Bordeaux, Clermont-Ferrand... Un suivi par l’équipe du festival est garanti tout au long du trajet : personne n’est laissé sur le bord de la route.</p>
 				</div>
@@ -69,49 +68,45 @@
 				</div>
 			</div>
 
-			
-
-
-
 			<!-- progra -->
 			<section class="content content--progra">
-				<h3 class="content--progra_title" id="progra">PROGRAMMATION</h3>
+				<h3 class="content__progra-title" id="progra">Programmation</h3>
 				<div class="grille">
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/cactus-mammuth.jpg">
-						<h3 class="content__progra-title">Cactus et Mammuth</h3>
+						<h3 class="content__progra-desc">Cactus et Mammuth</h3>
 					</a>
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/edgar-deception.jpg">
-						<h3 class="content__progra-title">Edgar déception</h3>
+						<h3 class="content__progra-desc">Edgar déception</h3>
 					</a>
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/ovhal.jpg">
-						<h3 class="content__progra-title">Ovhal44</h3>
+						<h3 class="content__progra-desc">Ovhal44</h3>
 					</a>
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/les-agites.jpg">
-						<h3 class="content__progra-title">Les Agités du Bocal</h3>
+						<h3 class="content__progra-desc">Les Agités du Bocal</h3>
 					</a>
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/1.png">
-						<h3 class="content__progra-title">Voilaaa Sound System</h3>
+						<h3 class="content__progra-desc">Voilaaa Sound System</h3>
 					</a>
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/1.png">
-						<h3 class="content__progra-title">groupe6</h3>
+						<h3 class="content__progra-desc">groupe6</h3>
 
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/1.png">
-						<h3 class="content__progra-title">groupe7</h3>
+						<h3 class="content__progra-desc">groupe7</h3>
 					</a>
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/1.png">
-						<h3 class="content__progra-title">groupe8</h3>
+						<h3 class="content__progra-desc">groupe8</h3>
 					</a>
 					<a class="content__progra-item" href="#">
 						<img class="content__progra-img" src="img/1.png">
-						<h3 class="content__progra-title">groupe9e</h3>
+						<h3 class="content__progra-desc">groupe9e</h3>
 					</a>
 					
 				</div>
