--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="content content--fixed">
 				<header class="header">
-					<h1 class="header__title">HIT THE ROAD</h1>
+					<h1 class="header__title"><a href="index.html">HIT THE ROAD</a></h1>
 					<h1 class="header__subtitle">30 mai - 1er juin 2020</h1>
 				</header>
 			
