--- a/billetterie.html
+++ b/billetterie.html
@@ -19,9 +19,76 @@
 				</header>
 			
 				<div class="menu">
-					<a href="billetterie.html"><h4 class="menu__title">BILLETTERIE</h4></a>
+					<a href="billetterie.html"><h4 class="menu__title-selected">BILLETTERIE</h4></a>
 					<a href="index.html#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
 				</div>
+			</div>	
+
+			<div class="content-wrap">
+				<div class="content content--layout content--layout-5">
+					<h3 class="content__title">Tickets 3 jours</h3>
+					<p class="content__desc" style="padding-top: 0">Le ticket 3 jours est valable du samedi 30 Mai au lundi 1er Juin. Ce ticket coûte 33 euros en early birds et 38 euros pour les moins rapides.
+					<br><br>
+					<b>En plus de l’accès au festival, les tickets 3 jours comprennent :</b>
+						<ul class="content__list">
+							<li>l’accès gratuit aux concerts et conférences</li>
+							<li>l’accès gratuit au camping du samedi 11h au lundi 11h </li>
+							<li>l’accès gratuit aux activités</li>
+							<li>l’accès gratuit aux douches et toilettes sèches</li>
+							<li>les deux brunchs du dimanche et du lundi</li>
+							<li>l’organisation des départs en stop</li>
+							<li>le kit du parfait autostoppeur</li>
+							<li>l’assistance de la voiture balai si nécessaire</li>
+						</ul>
+					</p>
+					<a class="content__rsv" href="#">Réserver maintenant</a>
+				</div>
+			</div>
+
+			<div class="content-wrap">
+				<div class="content content--layout content--layout-5">
+					<h3 class="content__title">Tickets 1 jour</h3>
+					<p class="content__desc" style="padding-top: 0">Le ticket 1 jours est valable pour le jour choisi uniquement :
+					<br><br><u>Ticket 1 jour samedi</u> - Accès au festival du samedi 11h au dimanche 11h.
+					<br><u>Ticket 1 jour dimanche</u> - Accès au festival du dimanche 11h au lundi 11h.
+					<br><br>Ce ticket coûte 17 euros en early birds et 19 euros pour les moins rapides. 
+
+					<br><br>
+					<b>En plus de l’accès au festival, les tickets 1 jour comprennent :</b>
+						<ul class="content__list">
+							<li>l’accès gratuit aux concerts et conférences pour le jour choisi uniquement</li>
+							<li>l’accès gratuit au camping pour le jour choisi uniquement</li>
+							<li>l’accès gratuit aux activités</li>
+							<li>l’accès gratuit aux douches et toilettes sèches</li>
+							<li>un brunch</li>
+							<li>l’organisation des départs en stop</li>
+							<li>le kit du parfait autostoppeur</li>
+							<li>l’assistance de la voiture balai si nécessaire</li>
+						</ul>
+					</p>
+					<a class="content__rsv" href="#">Réserver maintenant</a>
+				</div>
+			</div>
+
+			<div class="content-wrap">
+				<div class="content content--layout content--layout-5">
+					<h3 class="content__title">Tickets 1 soirée</h3>
+					<p class="content__desc" style="padding-top: 0">Le ticket 1 soirée est valable pour la soirée choisie uniquement :
+					<br><br><u>Ticket 1 soirée samedi</u> - Accès au festival du samedi 18h au dimanche 2h.
+					<br><u>Ticket 1 soirée dimanche</u> - Accès au festival du dimanche 18h au lundi 2h.
+					<br><br>Ce ticket coûte 13 euros.  
+
+					<br><br>
+					<b>En plus de l’accès au festival, les tickets 1 soirée comprennent :</b>
+						<ul class="content__list">
+							<li>l’accès gratuit aux concerts pour le soir choisi uniquement</li>
+							<li>l’accès gratuit aux toilettes sèches</li>
+						</ul>
+					</p>
+					<a class="content__rsv" href="#">Réserver maintenant</a>
+				</div>
+			</div>		
+
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
