--- a/cactus-mammuth.html
+++ b/cactus-mammuth.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>HIT THE ROAD 2020 - programmation</title>
+		<title>HIT THE ROAD 2020 - Cactus & Mammuth</title>
 		<meta name="description" content="Hit the Road, c’est une aventure musicale éco-responsable où les participants se rendent en autostop. C’est un évènement 100% associatif et à but non-lucratif. A l’affiche : voyages inattendus, concerts éclectiques, conférences inspirantes et délices bios et locaux !" />
 		<link rel="shortcut icon" href="favicon.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
@@ -22,6 +22,15 @@
 					<a href="billetterie.html"><h4 class="menu__title">BILLETTERIE</h4></a>
 					<a href="index.html#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
 				</div>
+			</div>
+			<div class="content-wrap">
+				<div class="content content--layout content--layout-6">
+					<h3 class="content__title">Cactus & Mammuth</h3>
+					<p class="content__desc" style="padding-top: 0">Descendants directs de la Reine Cactuna et du Roi Mammuthor ils ont reçu la mission divine de répandre dans l’univers la teuf, la joie et de détruire à jamais la morosité.<br><br>Armé de keytar sans fil, de microphones à turbines et de techniques de production électronique Plutonienne rejoint l’armée grandissante des Cacmuthons et viens retourner la fête avec eux !"
+					</p>
+					<img class="content__image" src="img/cactus-mammuth-L.jpg" style="padding-top: 60px">
+				</div>
+			</div>	
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
