--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			</div>
 			<div class="content content--fixed">
 				<header class="header">
-					<h1 class="header__title"><a href="index.html">HIT THE ROAD</a></h1>
-					<h1 class="header__subtitle">30 mai - 1er juin 2020</h1>
+					<h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
+					<h1 class="header__subtitle">30 mai - 1er juin</h1>
 				</header>
 			
 				<div class="menu">
@@ -63,17 +63,24 @@
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-3">
 					<h3 class="content__title">Tous les chemins mènent en Auvergne</h3>
-					<p class="content__desc" style="padding-top: 0">A 4h30 de Paris, 4h de Montpellier, 2h30 de Lyon, 2h30 de Bordeaux et 40 min de Clermont-Ferrand, Hit the Road 2020 plante sa tente au domaine du Balbuzard, à Condat-en-Combrailles.<br><br>Les lumières colorées d’enivrantes soirées se reflètent sur le lac scintillant au milieu des champs. Ce paysage verdoyant se met en scène en devenant piste de danse et espace d’échange pour un week-end hors du temps !</p>
+					<p class="content__desc" style="padding-top: 0">A 4h30 de Paris, 4h de Montpellier, 2h30 de Lyon, 2h30 de Bordeaux et 40 min de Clermont-Ferrand, Hit the Road 2020 plante sa tente au <a href="https://www.domainedubalbuzard.com/ " target="blank">domaine du Balbuzard</a>, à Condat-en-Combrailles.<br><br>Les lumières colorées d’enivrantes soirées se reflètent sur le lac scintillant au milieu des champs. Ce paysage verdoyant se met en scène en devenant piste de danse et espace d’échange pour un week-end hors du temps !</p>
 					<h3 class="content__quote">« <i>Hit the Road, c’est une utopie qui se réalise </i>»<br>— un admirateur secret</h3>
 				</div>
 			</div>
 
+			<div class="content-wrap">
+				<div class="content content--layout content--layout-4">
+					<img class="content__image" src="img/banner-3.jpg">
+				</div>
+				<span id="progra"></span>
+			</div>
+
 			<!-- progra -->
 			<section class="content content--progra">
-				<h3 class="content__progra-title" id="progra">Programmation</h3>
+				<h3 class="content__progra-title">Programmation</h3>
 				<div class="grille">
 	
-					<a class="content__progra-item" href="programmation.html">
+					<a class="content__progra-item" href="cactus-mammuth.html">
 						<img class="content__progra-img" src="img/cactus-mammuth.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Cactus et Mammuth</h3>
@@ -81,7 +88,7 @@
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
+					<a class="content__progra-item" href="edgar-deception.html">
 						<img class="content__progra-img" src="img/edgar-deception.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Edgar Déception</h3>
@@ -89,7 +96,7 @@
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
+					<a class="content__progra-item" href="ovhal.html">
 						<img class="content__progra-img" src="img/ovhal.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Ovhal44</h3>
@@ -97,7 +104,7 @@
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
+					<a class="content__progra-item" href="les-agites.html">
 						<img class="content__progra-img" src="img/les-agites.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Les Agités du Bocal</h3>
@@ -105,7 +112,7 @@
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
+					<a class="content__progra-item" href="voilaaa-soundsystems.html">
 						<img class="content__progra-img" src="img/1.png">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Voilaaa Soundsystems</h3>
