--- a/billetterie.html
+++ b/billetterie.html
@@ -24,7 +24,7 @@
 				</div>
 			</div>	
 
-			<div class="content-wrap">
+			<div class="content-wrap-2" style="margin-top: 200px;">
 				<div class="content content--layout content--layout-5">
 					<h3 class="content__title">Tickets 3 jours</h3>
 					<p class="content__desc" style="padding-top: 0">Le ticket 3 jours est valable du samedi 30 Mai au lundi 1er Juin. Ce ticket coûte 33 euros en early birds et 38 euros pour les moins rapides.
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 
-			<div class="content-wrap">
+			<div class="content-wrap-2">
 				<div class="content content--layout content--layout-5">
 					<h3 class="content__title">Tickets 1 jour</h3>
 					<p class="content__desc" style="padding-top: 0">Le ticket 1 jours est valable pour le jour choisi uniquement :
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 
-			<div class="content-wrap">
+			<div class="content-wrap-2">
 				<div class="content content--layout content--layout-5">
 					<h3 class="content__title">Tickets 1 soirée</h3>
 					<p class="content__desc" style="padding-top: 0">Le ticket 1 soirée est valable pour la soirée choisie uniquement :
