--- a/cactus-mammuth.html
+++ b/cactus-mammuth.html
@@ -23,10 +23,10 @@
 					<a href="index.html#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
 				</div>
 			</div>
-			<div class="content-wrap">
+			<div class="content-wrap-2" style="margin-top: 200px;">
 				<div class="content content--layout content--layout-6">
 					<h3 class="content__title">Cactus & Mammuth</h3>
-					<p class="content__desc" style="padding-top: 0">Descendants directs de la Reine Cactuna et du Roi Mammuthor ils ont reçu la mission divine de répandre dans l’univers la teuf, la joie et de détruire à jamais la morosité.<br><br>Armé de keytar sans fil, de microphones à turbines et de techniques de production électronique Plutonienne rejoint l’armée grandissante des Cacmuthons et viens retourner la fête avec eux !"
+					<p class="content__desc">Descendants directs de la Reine Cactuna et du Roi Mammuthor ils ont reçu la mission divine de répandre dans l’univers la teuf, la joie et de détruire à jamais la morosité.<br><br>Armé de keytar sans fil, de microphones à turbines et de techniques de production électronique Plutonienne rejoint l’armée grandissante des Cacmuthons et viens retourner la fête avec eux !"
 					</p>
 					<img class="content__image" src="img/cactus-mammuth-L.jpg" style="padding-top: 60px">
 				</div>
