--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
 	</head>
-	<body>
+	<body class="loading">
 		<main>
 			<div class="morph-wrap">
 				<svg class="morph" width="1400" height="770" viewBox="0 0 1400 770">
@@ -153,6 +153,19 @@
 					</a>
 				</div>
 			</section>
+				<div class="footer__container">
+					<div class="footer__container-contact">
+						<h3>Contact</h3>
+						<a href="#">stopandgosp@gmail.com</a>
+						<a href="#">messenger</a>
+						<a href="#">facebook</a>
+						<a href="#">instgagram</a>
+					</div>
+					<div class="footer__container-partenaires">
+						<h3>Partenaires</h3>
+						<img src="">
+					</div>	
+				</div>	
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
