--- a/billetterie.html
+++ b/billetterie.html
@@ -19,10 +19,9 @@
 				</header>
 			
 				<div class="menu">
-					<a href="billetterie.html"><h4 class="menu__title">BILLETTERIE</h4></a>
+					<a href="billetterie.html"><h4 class="menu__title-selected">BILLETTERIE</h4></a>
 					<a href="index.html#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
 				</div>
-
 			</div>	
 
 			<div class="content-wrap-2" style="margin-top: 200px;">
