add all band images

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="grille">
 	
 					<a class="content__progra-item" href="cactus-mammuth.html">
-						<img class="content__progra-img" src="img/cactus-mammuth.jpg">
+						<img class="content__progra-img" src="img/groupes/cactus-mammuth.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Cactus et Mammuth</h3>
 							<p class="content__progra-date">10 mai 20h</p>
@@ -89,7 +89,7 @@
 					</a>
 
 					<a class="content__progra-item" href="edgar-deception.html">
-						<img class="content__progra-img" src="img/edgar-deception.jpg">
+						<img class="content__progra-img" src="img/groupes/edgar-deception.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Edgar Déception</h3>
 							<p class="content__progra-date">10 mai 20h</p>
@@ -97,7 +97,7 @@
 					</a>
 
 					<a class="content__progra-item" href="ovhal.html">
-						<img class="content__progra-img" src="img/ovhal.jpg">
+						<img class="content__progra-img" src="img/groupes/ovhal.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Ovhal44</h3>
 							<p class="content__progra-date">10 mai 20h</p>
@@ -105,7 +105,7 @@
 					</a>
 
 					<a class="content__progra-item" href="les-agites.html">
-						<img class="content__progra-img" src="img/les-agites.jpg">
+						<img class="content__progra-img" src="img/groupes/les-agites.jpg">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Les Agités du Bocal</h3>
 							<p class="content__progra-date">10 mai 20h</p>
@@ -113,44 +113,44 @@
 					</a>
 
 					<a class="content__progra-item" href="voilaaa-soundsystems.html">
-						<img class="content__progra-img" src="img/1.png">
+						<img class="content__progra-img" src="img/groupes/voilaaa-soundsystems.png">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Voilaaa Soundsystems</h3>
 							<p class="content__progra-date">10 mai 20h</p>
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
-						<img class="content__progra-img" src="img/1.png">
+					<a class="content__progra-item" href="namaspamus.html">
+						<img class="content__progra-img" src="img/groupes/namaspamus.png">
 						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Groupe</h3>
+							<h3 class="content__progra-name">Namaspamus</h3>
 							<p class="content__progra-date">10 mai 20h</p>
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
-						<img class="content__progra-img" src="img/1.png">
+					<a class="content__progra-item" href="nootkatone.html">
+						<img class="content__progra-img" src="img/groupes/nootkatone.png">
 						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Groupe</h3>
+							<h3 class="content__progra-name">Nootkatone</h3>
 							<p class="content__progra-date">10 mai 20h</p>
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
-						<img class="content__progra-img" src="img/1.png">
+					<a class="content__progra-item" href="z-fabulous-orchestra.html">
+						<img class="content__progra-img" src="img/groupes/z-fabulous-orchestra.png">
 						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Groupe</h3>
+							<h3 class="content__progra-name">Z Fabulous Orchestra</h3>
 							<p class="content__progra-date">10 mai 20h</p>
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="programmation.html">
-						<img class="content__progra-img" src="img/1.png">
+					<!--<a class="content__progra-item" href="programmation.html">
+						<img class="content__progra-img" src="img/groupes/1.png">
 						<div class="content__progra-infos">
 							<h3 class="content__progra-name">Groupe</h3>
 							<p class="content__progra-date">10 mai 20h</p>
 						</div>
-					</a>
+					</a>-->
 				</div>
 			</section>
 				<div class="footer__container">
@@ -163,7 +163,11 @@
 					</div>
 					<div class="footer__container-partenaires">
 						<h3>Partenaires</h3>
-						<img src="">
+						<img src="img/sponsors/crous.png">
+						<img src="img/sponsors/cafes.png">
+						<img src="img/sponsors/stop_and_go.png">
+						<img src="img/sponsors/pisse_debout.png">
+						<img src="img/sponsors/paves.png">
 					</div>	
 				</div>	
 		</main>
