--- a/cactus-mammuth.html
+++ b/cactus-mammuth.html
@@ -14,8 +14,8 @@
 		<main>
 			<div class="content content--fixed">
 				<header class="header">
-					<h1 class="header__title"><a href="index.html">HIT THE ROAD</a></h1>
-					<h1 class="header__subtitle">30 mai - 1er juin 2020</h1>
+					<h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
+					<h1 class="header__subtitle">30 mai - 1er juin</h1>
 				</header>
 			
 				<div class="menu">
@@ -26,11 +26,37 @@
 			<div class="content-wrap-2" style="margin-top: 200px;">
 				<div class="content content--layout content--layout-6">
 					<h3 class="content__title">Cactus & Mammuth</h3>
-					<p class="content__desc">Descendants directs de la Reine Cactuna et du Roi Mammuthor ils ont reçu la mission divine de répandre dans l’univers la teuf, la joie et de détruire à jamais la morosité.<br><br>Armé de keytar sans fil, de microphones à turbines et de techniques de production électronique Plutonienne rejoint l’armée grandissante des Cacmuthons et viens retourner la fête avec eux !"
+					<p class="content__desc">
+					Dimanche @ 2h<br><br>
+					Descendants directs de la Reine Cactuna et du Roi Mammuthor ils ont reçu la mission divine de répandre dans l’univers la teuf, la joie et de détruire à jamais la morosité.<br><br>Armé de keytar sans fil, de microphones à turbines et de techniques de production électronique Plutonienne rejoint l’armée grandissante des Cacmuthons et viens retourner la fête avec eux !
+					<br><br>
+					<a href=" https://www.facebook.com/cactusetmammuth/" target="blank">Facebook</a><br>
+					<a href=" https://www.instagram.com/cactusetmammuth/" target="blank">Instagram</a>
+
 					</p>
-					<img class="content__image" src="img/cactus-mammuth-L.jpg" style="padding-top: 60px">
+					<img class="content__image" src="img/groupes/cactus-mammuth-L.jpg" style="padding-top: 60px">
+					<div class="youtube" style="margin-top: 60px">
+    					<iframe width="560" height="315" src="https://www.youtube.com/embed/w9oI-se3iEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
-			</div>	
+			</div>
+			<div class="footer__container">
+				<div class="footer__container-contact">
+					<h2>Contact</h2>
+					<a href="mailto:stopandgosp@gmail.com">stopandgosp@gmail.com</a>
+					<a href="https://m.me/stopandgo.sciencespo" target="blank">messenger</a>
+					<a href="https://www.facebook.com/stopandgo.sciencespo" target="blank">facebook</a>
+					<!--<a href="#" target="blank">instgagram</a>-->
+				</div>
+				<div class="footer__container-partenaires">
+					<h2>Partenaires</h2>
+					<a href="http://www.crous-paris.fr/" target="blank"><img src="img/sponsors/crous.png"></a>
+					<a href="https://assopaves.org/cafes" target="blank"><img src="img/sponsors/cafes.png"></a>
+					<a href="https://stopandgosp.wixsite.com/" target="blank"><img src="img/sponsors/stop_and_go.png"></a>
+					<a href="https://www.pissedebout.fr/" target="blank"><img src="img/sponsors/pisse_debout.png"></a>
+					<a href="https://assopaves.org/" target="blank"><img src="img/sponsors/paves.png"></a>
+				</div>	
+			</div>		
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
