--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 						</div>
 					</a>
 
-					<a class="content__progra-item" href="voilaaa-soundsystems.html">
-						<img class="content__progra-img" src="img/groupes/voilaaa-soundsystems.png">
+					<a class="content__progra-item" href="voilaaa-soundsystem.html">
+						<img class="content__progra-img" src="img/groupes/voilaaa-soundsystem.png">
 						<div class="content__progra-infos">
-							<h3 class="content__progra-name">Voilaaa Soundsystems</h3>
+							<h3 class="content__progra-name">Voilaaa Soundsystem</h3>
 							<p class="content__progra-date">10 mai 20h</p>
 						</div>
 					</a>
@@ -153,23 +153,23 @@
 					</a>-->
 				</div>
 			</section>
-				<div class="footer__container">
-					<div class="footer__container-contact">
-						<h3>Contact</h3>
-						<a href="#">stopandgosp@gmail.com</a>
-						<a href="#">messenger</a>
-						<a href="#">facebook</a>
-						<a href="#">instgagram</a>
-					</div>
-					<div class="footer__container-partenaires">
-						<h3>Partenaires</h3>
-						<img src="img/sponsors/crous.png">
-						<img src="img/sponsors/cafes.png">
-						<img src="img/sponsors/stop_and_go.png">
-						<img src="img/sponsors/pisse_debout.png">
-						<img src="img/sponsors/paves.png">
-					</div>	
+			<div class="footer__container">
+				<div class="footer__container-contact">
+					<h2>Contact</h2>
+					<a href="mailto:stopandgosp@gmail.com">stopandgosp@gmail.com</a>
+					<a href="https://m.me/stopandgo.sciencespo" target="blank">messenger</a>
+					<a href="https://www.facebook.com/stopandgo.sciencespo" target="blank">facebook</a>
+					<!--<a href="#" target="blank">instgagram</a>-->
+				</div>
+				<div class="footer__container-partenaires">
+					<h2>Partenaires</h2>
+					<a href="http://www.crous-paris.fr/" target="blank"><img src="img/sponsors/crous.png"></a>
+					<a href="https://assopaves.org/cafes" target="blank"><img src="img/sponsors/cafes.png"></a>
+					<a href="https://stopandgosp.wixsite.com/" target="blank"><img src="img/sponsors/stop_and_go.png"></a>
+					<a href="https://www.pissedebout.fr/" target="blank"><img src="img/sponsors/pisse_debout.png"></a>
+					<a href="https://assopaves.org/" target="blank"><img src="img/sponsors/paves.png"></a>
 				</div>	
+			</div>	
 		</main>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/anime.min.js"></script>
