--- a/billetterie.html
+++ b/billetterie.html
@@ -19,8 +19,8 @@
 				</header>
 			
 				<div class="menu">
-					<a href="billetterie.html"><h4 class="menu__title-selected">BILLETTERIE</h4></a>
-					<a href="index.html#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
+					<a href="billetterie.html"><h4 class="menu__title-selected">Billetterie</h4></a>
+					<a href="index.html#progra"><h4 class="menu__title">Porgrammation</h4></a>
 				</div>
 			</div>	
 
