--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				</header>
 			
 				<div class="menu">
-					<a href="billetterie.html"><h4 class="menu__title">BILLETTERIE</h4></a>
-					<a href="#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
+					<a href="Billetterie.html"><h4 class="menu__title">Billetterie</h4></a>
+					<a href="#progra"><h4 class="menu__title">Programmation</h4></a>
 				</div>
 
 			</div>
