--- a/nootkatone.html
+++ b/nootkatone.html
@@ -19,8 +19,8 @@
 				</header>
 			
 				<div class="menu">
-					<a href="billetterie.html"><h4 class="menu__title">BILLETTERIE</h4></a>
-					<a href="index.html#progra"><h4 class="menu__title">PROGRAMMATION</h4></a>
+					<a href="Billetterie.html"><h4 class="menu__title">Billetterie</h4></a>
+					<a href="index.html#progra"><h4 class="menu__title">Programmation</h4></a>
 				</div>
 			</div>
 			<div class="content-wrap-2" style="margin-top: 200px;">
