--- a/billetterie.html
+++ b/billetterie.html
@@ -42,7 +42,7 @@
 							<li>l’assistance de la voiture balai si nécessaire</li>
 						</ul>
 					</p>
-					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" about="blank">Réserver maintenant</a>
+					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" about="_blank">Réserver maintenant</a>
 				</div>
 			</div>
 
@@ -67,7 +67,7 @@
 							<li>l’assistance de la voiture balai si nécessaire</li>
 						</ul>
 					</p>
-					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" about="blank">Réserver maintenant</a>
+					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" about="_blank">Réserver maintenant</a>
 				</div>
 			</div>
 
@@ -86,7 +86,7 @@
 							<li>l’accès gratuit aux toilettes sèches</li>
 						</ul>
 					</p>
-					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" about="blank">Réserver maintenant</a>
+					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" about="_blank">Réserver maintenant</a>
 				</div>
 			</div>
 
