--- a/namaspamus.html
+++ b/namaspamus.html
@@ -44,7 +44,9 @@
 					<br><br>
 					<a href="https://www.facebook.com/NamaspamusParis/" target="blank">Facebook</a><br>
 					<a href="https://www.instagram.com/namaspamusParis/" target="blank">Instagram</a><br>
+					<a href="https://www.youtube.com/channel/UC-644NtW8_azbfsPHAIDzUA" target="blank">Youtube</a><br>
 					<a href="https://soundcloud.com/namaspamus/tracks" target="blank">Soundcloud</a>
+					
 					</p>
 					<img class="content__image" src="img/groupes/namaspamus-L.jpg" style="padding-top: 60px">
 				</div>
